[tool.poetry]
name = "HW3-PRIM-MST-2025"
version = "0.2.5"
authors = [
    "Abe Arab <abolfazl.arab@ucsf.edu>",
]
license = "MIT"
readme = "README.md"
packages = [
	{ include = "mst" },
	{ include = "pyproject.toml" },
]

[tool.poetry.dependencies]
python = ">=3.13"

[tool.poetry.group.test.dependencies]
pytest = "*"
tomli = "*"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"